crates/pamoja-ffi/include/pamoja.h

// Builds the INA226 bus-voltage register a monitor reports for a bus voltage.
//
// # Returns
//
// The register value, at 1.25 mV per count.
uint16_t pamoja_ina226_bus_register(uint32_t microvolts);
// Builds the INA226 current register a monitor reports for a current.
//
// # Returns
//
// The signed register value, or zero if `current_lsb_microamps` is zero.
int16_t pamoja_ina226_current_register(int32_t microamps, uint32_t current_lsb_microamps);
// Builds the INA226 power register a monitor reports for a power.
//
// # Returns
//
// The register value, or zero if `current_lsb_microamps` is zero.
uint16_t pamoja_ina226_power_register(uint32_t microwatts, uint32_t current_lsb_microamps);
// Computes the INA226 current register the chip derives from a shunt reading.
//
// # Returns
//
// The signed current register the part's own arithmetic produces.
int16_t pamoja_ina226_current_register_from_shunt(int16_t shunt, uint16_t calibration);
// Computes the INA226 power register the chip derives from a current reading.
//
// # Returns
//
// The power register the part's own arithmetic produces.
uint16_t pamoja_ina226_power_register_from_current(int16_t current, uint16_t bus);