bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.Sensing.cs


    /// <summary>
    /// Builds the INA226 bus-voltage register a monitor reports for a bus voltage. #
    /// Returns The register value, at 1.25 mV per count.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_ina226_bus_register(uint microvolts);

    /// <summary>
    /// Builds the INA226 current register a monitor reports for a current. # Returns The
    /// signed register value, or zero if current_lsb_microamps is zero.
    /// </summary>
    [LibraryImport(Library)]
    public static partial short pamoja_ina226_current_register(
        int microamps,
        uint currentLsbMicroamps);

    /// <summary>
    /// Builds the INA226 power register a monitor reports for a power. # Returns The
    /// register value, or zero if current_lsb_microamps is zero.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_ina226_power_register(
        uint microwatts,
        uint currentLsbMicroamps);

    /// <summary>
    /// Computes the INA226 current register the chip derives from a shunt reading. #
    /// Returns The signed current register the part's own arithmetic produces.
    /// </summary>
    [LibraryImport(Library)]
    public static partial short pamoja_ina226_current_register_from_shunt(
        short shunt,
        ushort calibration);

    /// <summary>
    /// Computes the INA226 power register the chip derives from a current reading. #
    /// Returns The power register the part's own arithmetic produces.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_ina226_power_register_from_current(
        short current,
        ushort bus);
}
